@@ -5,12 +5,10 @@ package org.xbery.artbeams.mailing.controller
  */
 data class SubscriptionFormData(
     val email: String,
-    val name: String,
-    val antispamQuestion: String,
-    val antispamAnswer: String
+    val name: String
 ) {
 
     companion object {
-        val Empty = SubscriptionFormData("", "", "", "")
+        val Empty = SubscriptionFormData("", "")
     }
 }
