@@ -179,37 +179,51 @@
          * and must contain sub-element with class name formClass + '-ajax-content' to replace
          * its inner HTML content with htmlContent of AJAX response body.
          */
-        function ajaxHandleFormWithClass(formClass) {
+        function ajaxHandleFormWithClass(formClass, useRecaptcha) {
             document.querySelector('.' + formClass).addEventListener('submit', function (event) {
               event.preventDefault();
               var formElement = this;
               const formData = new FormData(formElement);
-              const searchParams = new URLSearchParams(formData);
-              // Submission of form data:
-              fetch(formElement.getAttribute('action'), {
-                  method: formElement.getAttribute('method'),
-                  body: searchParams
-              })
-              .then(res => {
-                // Parse response from server as JSON
-                var responseJson = res.json();
-                return responseJson;
-              })
-              .then(data => {
-                  if (data.redirectUri) {
-                    window.location.href = data.redirectUri; // Redirect to the URI if provided
-                  } else if (data.htmlContent) {
-                      const ajaxContentElement = document.querySelector('.' + formClass + '-ajax-content');
-                      if (ajaxContentElement) {
-                          ajaxContentElement.innerHTML = data.htmlContent;
-                      } else {
-                        console.error('Element to replace with AJAX data was not found.');
-                      }
-                  }
-              })
-              .catch(error => console.error('Error:', error));
+              if (useRecaptcha) {
+                grecaptcha.ready(function() {
+                    grecaptcha.execute('${xlat['recaptcha.siteKey']}', {action: 'submit'}).then(function(token) {
+                        // Add the reCaptcha token to the form data
+                        formData.append('g-recaptcha-response', token);
+                        ajaxHandleForm(formElement, formClass, formData);
+                    });
+                });
+              } else {
+                  ajaxHandleForm(formElement, formClass, formData);
+              }
             });
-          }
+        }
+
+        function ajaxHandleForm(formElement, formClass, formData) {
+          const searchParams = new URLSearchParams(formData);
+          // Submission of form data:
+          fetch(formElement.getAttribute('action'), {
+              method: formElement.getAttribute('method'),
+              body: searchParams
+          })
+          .then(res => {
+            // Parse response from server as JSON
+            var responseJson = res.json();
+            return responseJson;
+          })
+          .then(data => {
+              if (data.redirectUri) {
+                window.location.href = data.redirectUri; // Redirect to the URI if provided
+              } else if (data.htmlContent) {
+                  const ajaxContentElement = document.querySelector('.' + formClass + '-ajax-content');
+                  if (ajaxContentElement) {
+                      ajaxContentElement.innerHTML = data.htmlContent;
+                  } else {
+                    console.error('Element to replace with AJAX data was not found.');
+                  }
+              }
+          })
+          .catch(error => console.error('Error:', error));
+        }
     </script>
 
   </head>
