@@ -11,6 +11,8 @@ ALTER COLUMN password SET DEFAULT NULL;
 
 * reCaptcha V3 settings:
 ```sql
+INSERT INTO localisation (entry_key, entry_value) VALUES ('captcha.invalid', 'Nevalidní captcha (ochrana proti robotům). Zkuste prosím hýbat myší více jako člověk :-), nebo mě kontaktujte emailem.');
+INSERT INTO localisation (entry_key, entry_value) VALUES ('subscription.error', 'Chyba při subskripci. Zkuste to prosím později nebo mě kontaktujte emailem.');
 INSERT INTO localisation (entry_key, entry_value) VALUES ('recaptcha.siteKey', '???');
 INSERT INTO config (entry_key, entry_value) VALUES ('recaptcha.secretKey', '???');
 ```
